Fri Oct 18 14:09:23 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe.ads, xe_stubs.adb, xe_back.adb, xe_parse.adb: Add pragma
 	Version (Checks => [False | True])

Mon Oct  7 13:30:30 1996  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stubs.adb, xe.adb, xe.ads: Fix some problems with child units
	and file naming (a.b was translated in to a.b.adb rather than
	a-b.adb). There are still problems due to a.b'version.

Mon Sep 30 11:43:01 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_utils.adb: Use configuration name as partition
 	main subprogram. File stamp checking has been a little bit
 	improved.

Sun Sep 29 18:33:58 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_utils.adb: Later has been changed to More_Recent.

Mon Sep 23 18:23:05 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.adb: Get_Host, Get_Command_Line, Get_Absolute_Exec,
	Get_Relative_Exec and Get_Main_Subprogram return default values
	when no specific value has been specified.

Wed Sep 11 19:26:16 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_parse.adb: Give proper error message on undeclared variable.

Wed Sep 11 15:57:44 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_scan.adb, xe.ads : Don't tolerate reserved keywords anymore.

	* xe_back.adb: New error message when no main program has been
 	defined in the configuration file.

Wed Sep 11 14:39:58 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: Replaced which by type.
